2013-12-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* spc_xtx.c: Guarantee that mline in is_pdfm_mapline(mline) is a
	zero-ended string when called by spc_handler_xtx_fontmapline().

2013-12-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* spc_pdfm.c: Guarantee that mline in is_pdfm_mapline(mline) is a
	zero-ended string when called by spc_handler_pdfm_mapline().

2013-11-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xbb.c: Add suffixes ".ai", ".AI" for the Illustrator files.
	In recent illustrators, their default format is PDF.

2013-11-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* mpost.c: Fix a bug which I introduced in MetaPost mode (-M option).
	Note that the definition of x, and y in
	pdf_doc_begin_page (scale, x, y) is the negative of those in
	pdf_doc_begin_grabbing (ident, x, y, ...).

2013-11-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* mpost.c: Set the origin at (llx, lly) to match the new xetex.def
	and dvipdfmx.def.

2013-11-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xbb.c: Set pdf_version in extractbb to be PDF_VERSION_MAX.

2013-11-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfobj.c: Correct %c to %d since pdf_version is unsigned int.
	Fix a typo.

2013-10-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, /ac/withenable.ac, configure.ac: Use libs/paper.

2013-10-12  Khaled Hosny  <khaledhosny@eglug.org>

	* dvi.c, dvicodes.h: Rename XDVI_ID to XDV_ID.

2013-09-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop the useless KPSE_LT_HACK.
	Drop the redundant AC_HEADER_STDC and check for mkstemp.

2013-09-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* epdf.c, pdfdraw.c, pdfobj.c, pdfximage.c, spc_color.c,
	spc_color.c, specials.c: These files are now identical for dvipdfmx
	and xdvipdfmx and are part of libutil.a.
	* Makefile.am: Adapted.

	* spc_pdfm.c: Reduced dvipdfmx/xdvipdfmx diffs.

2013-09-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bmpimage.c, dpxfile.c, pdfparse.c, spc_html.c, spc_tpic.c: